src/objects/UM_Collection__c.object
<CustomObject>
    <description>Extract from Kenan</description>
    <fields>
        <fullName>Billing_Account_Number__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; UM_Billing_Location__r.Id,UM_Billing_Location__r.LG_BillingAccountNumber__c,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Billing_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Collections</relationshipLabel>
        <relationshipName>Collections</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_Collection_Amount_Currency__c</fullName>
        <description>Field to show real value of Collection Amount sent by Kenan</description>
        <label>Collection Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UM_Collection_Amount__c</fullName>
        <description>Balance due amount; equals the total of the new_charges value plus the total_adj value and the total_paid value and new_charge_credits.</description>
        <label>Collection Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_Collection_Hold_Status_Translation__c</fullName>
        <description>Translation of values from Collection Hold Status from Kenan</description>
        <label>Collection Hold Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Collection_Hold_Status__c</fullName>
        <description>0 or 1. 1=ON HOLD</description>
        <label>Collection Hold Status</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Collection_ID__c</fullName>
        <description>Unique collection ID: Unique identifier of the collectable + Server identifier to uniquely identify collectable_id.</description>
        <label>Collection ID</label>
        <length>14</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Collection_Indicator_Translation__c</fullName>
        <description>Translation of values from Collection Indicator from Kenan</description>
        <label>Collection Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Collection_Indicator__c</fullName>
        <description>Indicates whether an account is in collections:
0 = not in collections
1 = automatically placed into collections</description>
        <label>Collection Indicator</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Collection_Letter_ID__c</fullName>
        <label>Collection Letter</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Collection_Level__c</fullName>
        <description>Current level/event</description>
        <label>Next Collection Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Collection_Method_Translation__c</fullName>
        <description>Translation of values from Collection Method from Kenan</description>
        <label>Collection Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Collection_Method__c</fullName>
        <description>Account credit rating, used to determine collections scenario
0 - manual
1 - automatic</description>
        <label>Collection Method</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Collection_Path__c</fullName>
        <label>Collection Path</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Collection_Start_Date_Converted__c</fullName>
        <label>Collection Start-Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UM_Collection_Start_Date__c</fullName>
        <description>Date the account entered collections</description>
        <label>Collection Start-Date</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Collection_Status__c</fullName>
        <formula>CASE(UM_Collection_Level__c, 
&apos;0&apos;, &apos;Nicht in Mahnung&apos;, 
&apos;1&apos;, &apos;1. Mahnung&apos;, 
&apos;2&apos;, &apos;2. Mahnung&apos;, 
&apos;3&apos;, &apos;Downgrade&apos;, 
&apos;4&apos;, &apos;Kündigung&apos;, 
&apos;5&apos;, &apos;Inkasso&apos;, 
&apos;6&apos;, &apos;Schlussrechnung&apos;, 
&apos;7&apos;, &apos;Wiederherstellung Service&apos;, 
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collection Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Customer_SF_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collections</relationshipLabel>
        <relationshipName>Collections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_Days_left_to_next_collection_event__c</fullName>
        <description>Num of days are remaining until the current event is completed and the account is processed to the next event</description>
        <label>Days to next collection status</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_Last_Event_Date__c</fullName>
        <label>Current Collection Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Last_Event_Level__c</fullName>
        <label>Collection Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Manual_Release__c</fullName>
        <label>Manual Release</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Name_Counter__c</fullName>
        <label>Name Counter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Open_Dunning_Letter__c</fullName>
        <formula>IF(UM_Collection_Letter_ID__c != null, HYPERLINK(&quot;/apex/UM_Documentum_Dunning?letterno=&quot; +UM_Collection_Letter_ID__c, &quot;Open Dunning Letter&quot;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Dunning Letter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_UNIQUE_REC_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique Rec Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Collection</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UM_Collection_Indicator_Translation__c</columns>
        <columns>UM_Customer_SF_ID__c</columns>
        <columns>UM_Billing_Location__c</columns>
        <columns>UM_Collection_Method_Translation__c</columns>
        <columns>UM_Collection_Amount_Currency__c</columns>
        <columns>UM_Collection_Start_Date_Converted__c</columns>
        <columns>UM_Collection_Hold_Status_Translation__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Collection Cycle</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>